--- a/.github/workflows/test_calc.yml
+++ b/.github/workflows/test_calc.yml
@@ -11,9 +11,14 @@ jobs:
         uses: actions/checkout@v2
       - name: Demo shell commands
         run: |
+          echo "$ pwd"
           pwd
-          echo "Hello"
-          ls -la
+      - name: Install pytest
+        run: |
+          echo "$ pip install pytest"
+          pip install pytest
+          echo "$ pytest --version"
+          pytest --version
 
         
     
