--- a/.github/workflows/deploy_circle.yml
+++ b/.github/workflows/deploy_circle.yml
@@ -34,14 +34,17 @@ jobs:
         echo $RUN 'ls -la'
     - name: deploy circle to remote server
       run: |
+        export TARGET=$USER@$HOST
+        export RUN="ssh $SSH_OPTIONS $TARGET"
+        export COPY="scp $SSH_OPTIONS"
         cd circle
         ls -la
-        echo $COPY index.html $TARGET/static
-        $COPY index.html $TARGET/static
-        echo $COPY sketch.js $TARGET/static
-        $COPY sketch.js $TARGET/static
-        echo $COPY style.css $TARGET/static
-        $COPY style.css $TARGET/static
+        echo $COPY index.html $TARGET:/static
+        $COPY index.html $TARGET:/static
+        echo $COPY sketch.js $TARGET:/static
+        $COPY sketch.js $TARGET:/static
+        echo $COPY style.css $TARGET:/static
+        $COPY style.css $TARGET:/static
         echo $RUN 'ls -la'
         $RUN 'ls -la'
 
