fix target directory

--- a/.github/workflows/deploy_circle.yml
+++ b/.github/workflows/deploy_circle.yml
@@ -39,12 +39,12 @@ jobs:
         export COPY="scp $SSH_OPTIONS"
         cd circle
         ls -la
-        echo $COPY index.html $TARGET:/static
-        $COPY index.html $TARGET:/static
-        echo $COPY sketch.js $TARGET:/static
-        $COPY sketch.js $TARGET:/static
-        echo $COPY style.css $TARGET:/static
-        $COPY style.css $TARGET:/static
+        echo $COPY index.html $TARGET:/root/static
+        $COPY index.html $TARGET:/root/static
+        echo $COPY sketch.js $TARGET:/root/static
+        $COPY sketch.js $TARGET:/root/static
+        echo $COPY style.css $TARGET:/root/static
+        $COPY style.css $TARGET:/root/static
         echo $RUN 'ls -la'
         $RUN 'ls -la'
 
